--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -12,8 +14,10 @@ jobs:
           root_file: NickClineResume.tex  # Update this to match your .tex filename
       - name: Commit and push if changed
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git add NickClineResume.pdf
           git commit -m "Update compiled PDF" || exit 0
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
