--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -3,21 +3,34 @@ on: [push]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
+
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: NickClineResume.tex  # Update this to match your .tex filename
-      - name: Commit and push if changed
+          root_file: NickClineResume.tex
+
+      - name: Upload PDF as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: NickClineResume
+          path: NickClineResume.pdf
+
+      - name: Commit PDF to pdf-branch
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git checkout -b pdf-branch
           git add NickClineResume.pdf
-          git commit -m "Update compiled PDF" || exit 0
-          git push
+          git commit -m "Update PDF resume" || echo "No changes to commit"
+          git push origin pdf-branch --force
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: NickClineResume.pdf
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
