--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -20,8 +22,8 @@ jobs:
 
       - name: Commit PDF to pdf-branch
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git checkout -b pdf-branch
           git add NickClineResume.pdf
           git commit -m "Update PDF resume" || echo "No changes to commit"
